# mpcith_kyber_kosk

./: .gitignore  CMakeLists.txt  benchmark.h  kosk.cpp  kosk.hpp  main.cpp  mlwe_prover.cpp  mlwe_prover.hpp  mlwe_verifier.cpp  mlwe_verifier.hpp  params.hpp  plain_lwe_batch_prove(1-1000).csv  plain_lwe_batch_prove(1-40).csv  readme.md  ss.cpp  ss.hpp  test.h
kyber/: indcpa.c  poly.h
ntl/include/NTL/: ConfigLog.h  config.h
src/: frodo_prover.cpp  frodo_prover.h  kyber_prover.cpp  kyber_prover.h  packed_secret_sharing.cpp  packed_secret_sharing.h  plain_LWE_prover.cpp  plain_LWE_prover.h  utils.cpp  utils.h
utils/: gf3329.c  gf3329.h  precomputed_kyber.h
